# filebin

./: .dockerignore
.github/workflows/: docker-backend.yaml
backend/: .dockerignore  .env.sample  Cargo.toml  Dockerfile  config.yaml.sample  docker-compose-local.yaml  docker-compose-prod.yaml
backend/.cargo/: config.toml
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: lib.rs  service.rs
backend/crates/auth/src/service/: jwt.rs
backend/crates/cache/: Cargo.toml
backend/crates/cache/src/: lib.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs  macros.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: entity.rs  into_string.rs  lib.rs  macros.rs  models.rs  persistence.rs  sync.rs
backend/crates/domain/src/entity/: files.rs  folders.rs  prelude.rs
backend/crates/domain/src/models/: encrypted_blobs.rs  encrypted_vault.rs  files.rs  folders.rs
backend/crates/domain/src/persistance/: entities.rs
backend/crates/domain/src/persistance/entities/: encrypted_blobs.rs  encrypted_vault.rs  files.rs  folders.rs  prelude.rs
backend/crates/domain/src/persistence/: encrypted_blobs.rs  encrypted_vault.rs  files.rs  folders.rs  prelude.rs  sea_orm_active_enums.rs
backend/crates/domain/src/sync/: arc_cow.rs  shared_string.rs
backend/crates/domain_macros/: Cargo.toml
backend/crates/domain_macros/src/: args.rs  generator.rs  lib.rs  newtype.rs
backend/crates/download/: Cargo.toml
backend/crates/download/src/: lib.rs  service.rs
backend/crates/download/src/service/: basic.rs
backend/crates/encryption/: Cargo.toml
backend/crates/files/: Cargo.toml
backend/crates/files/src/: lib.rs  repository.rs  service.rs  storage.rs
backend/crates/files/src/repository/: cache.rs  db.rs
backend/crates/files/src/service/: basic.rs
backend/crates/files/src/storage/: s3.rs
backend/crates/folders/: Cargo.toml
backend/crates/folders/src/: lib.rs  repository.rs  service.rs
backend/crates/folders/src/repository/: cache.rs  db.rs
backend/crates/folders/src/service/: basic.rs
backend/crates/grpc/: Cargo.toml  build.rs
backend/crates/grpc/src/: config.rs  main.rs  schema.rs  v1.rs
backend/crates/grpc/src/v1/: dto.rs  files.rs  folder.rs
backend/crates/id_generator/: Cargo.toml
backend/crates/id_generator/src/: service.rs
backend/crates/id_generator/src/service/: random.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/sql/down/: dm20260614_231015_initial.sql
backend/crates/migration/sql/up/: m20260614_231015_initial.sql
backend/crates/migration/src/: lib.rs  macros.rs  main.rs  migrator.rs
backend/crates/models_macros/: Cargo.toml
backend/crates/service/: Cargo.toml
backend/crates/service/src/: error.rs  lib.rs
backend/crates/service_macro/: Cargo.toml
backend/crates/service_macro/src/: args.rs  expand.rs  generator.rs  kw.rs  lib.rs
backend/crates/service_macros/: Cargo.toml
backend/crates/service_macros/src/: args.rs  lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs  redis.rs
backend/crates/updates/: Cargo.toml
backend/crates/updates/src/: service.rs
backend/crates/updates/src/service/: basic.rs  rabbitmq.rs
backend/crates/updates/src/service/rabbitmq/: stream.rs  subscription.rs
backend/crates/upload/: Cargo.toml
backend/crates/upload/src/: lib.rs  lmited_stream.rs  service.rs
backend/crates/upload/src/service/: basic.rs
frontend/src/app/: layout.tsx  page.tsx
proto/: buf.yaml
proto/proto/folder/v1/: common.proto  encryption.proto  files.proto  folder.proto  updates.proto
proto/proto/session/v1/: session.proto
