cargo-features = ["codegen-backend", "panic-immediate-abort"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
incremental = true
panic = "immediate-abort"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tracing = "0.1.44"
derive-new = "0.7.0"
async-trait = "0.1.89"
thiserror = "2.0.18"
tokio = { version = "1.52.3" }
sea-orm = { version = "2.0.0-rc.40", features = ["sqlx-postgres", "runtime-tokio"] }
chrono = { version = "0.4.45", features = ["serde"] }
nutype = { version = "0.7.0", features = ["serde", "derive_unchecked"] }
serde = { version = "1.0.228", features = ["derive"] }
hmac = "0.13.0"
sha2 = "0.11.0"
secrecy = "0.10.3"
auto_impl = "1.3.0"
rand = "0.10.1"
tinystr = { version = "0.8.3", features = ["serde"] }
