[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
incremental = true
panic = "abort"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tracing = "0.1.44"
derive-new = "0.7.0"
async-trait = "0.1.89"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "sync"] }
sea-orm = { version = "2.0.0-rc.41", features = ["sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = "2.0.0-rc.41"
chrono = { version = "0.4.45", features = ["serde"] }
nutype = { version = "0.7.0", features = ["serde", "derive_unchecked"] }
serde = { version = "1.0.228", features = ["derive"] }
hmac = "0.13.0"
sha2 = "0.11.0"
secrecy = "0.10.3"
auto_impl = "1.3.0"
rand = "0.10.1"
tinystr = { version = "0.8.3", features = ["serde"] }
color-eyre = "0.6.5"
uuid = { version = "1.23.4", features = ["v7"] }
bytes = "1.12.0"
derive_more = { version = "2.1.1", features = ["full"] }
aws-sdk-s3 = "1.137.0"
tokio-util = "0.7.18"
derive_builder = "0.20.2"
deadpool-redis = "0.23.0"
parking_lot = "0.12.5"
futures = "0.3.32"
futures-util = "0.3.32"
futures-core = "0.3.32"
pin-project = "1.1.13"
tokio-stream = { version = "0.1.18", features = ["sync"] }
bitflags = "2.13.0"
amqprs = { version = "2.1.5", features = ["urispec"] }
derivative = "2.2.0"
postcard = { version = "1.1.3", features = ["alloc"] }
pastey = "0.2.3"
