[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
service.path = "../service"
jsonwebtoken = "10.4.0"
domain.path = "../domain"
hmac = { workspace = true, features = ["zeroize"] }
sha2 = { workspace = true, features = ["zeroize"] }
secrecy.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
