[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
service.path = "../service"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
domain.path = "../domain"
hmac = { workspace = true, features = ["zeroize"] }
sha2 = { workspace = true, features = ["zeroize"] }
secrecy.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
