[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
sea-orm.workspace = true
chrono.workspace = true
nutype.workspace = true
serde.workspace = true
tinystr.workspace = true
derive_more.workspace = true
base64.workspace = true
uuid.workspace = true
bytes.workspace = true
strum = "0.28.0"
strum_macros = "0.28.0"
