[package]
name = "folders"
version.workspace = true
edition.workspace = true

[dependencies]
service.path = "../service"
domain.path = "../domain"
sea-orm.workspace = true
derive-new.workspace = true
thiserror.workspace = true
id_generator.path = "../id_generator"
tracing.workspace = true
tokio.workspace = true
files.path = "../files"
storage.path = "../storage"
cache.path = "../cache"
