[package]
name = "service_macro"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
syn = { version = "2.0.118", features = ["full", "extra-traits", "parsing", "visit-mut"] }
quote = "1.0.46"
bitflags.workspace = true
proc-macro-crate = "3.5.0"
derive-new = "0.7.0"
