[package]
name = "updates"
version.workspace = true
edition.workspace = true

[dependencies]
domain.path = "../domain"
service.path = "../service"
tokio.workspace = true
futures.workspace = true
parking_lot.workspace = true
derive-new.workspace = true
tokio-stream.workspace = true
pin-project.workspace = true
thiserror.workspace = true
amqprs.workspace = true
derivative.workspace = true
serde.workspace = true
postcard.workspace = true
tracing.workspace = true
